--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,17 @@ h3 {
   font-size: 1.5rem;
 }
 
+.summary-text-number {
+  font-weight: 700;
+  font-size: 4rem;
+  fill: purple;
+}
+
+.summary-text {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
 /* Custom radio button
 Taken from w3schools: https://www.w3schools.com/howto/howto_css_custom_checkbox.asp */
 .radio-button {
@@ -107,7 +118,7 @@ body {
 
 .sections > div{
   opacity: .2;
-  margin-bottom: 200px;
+  margin-bottom: 300px;
 }
 .sections > div:last-child{
   margin-bottom: 400px;
