--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ h3 {
   font-size: 1.5rem;
 }
 
+.circle-text {
+  fill: #00b395;
+  font-weight: 700;
+}
+
 .summary-text-number {
   font-weight: 700;
   font-size: 4rem;
@@ -128,7 +133,7 @@ body {
   margin-bottom: 300px;
 }
 .sections > div:last-child{
-  margin-bottom: 400px;
+  margin-bottom: 500px;
 }
 .sections > div.graph-scroll-active{
   opacity: 1;
